@@ -9,6 +9,8 @@
 - =inform7-mode= for editing Inform 7 files
 - support for detecting Inform 7 (=.ni=, =.i7=) and Inform 7
   extension (=.i7x=) files
+- basic indentation
+  - after a rule introduction
 - basic syntax highlighting
   - block comments
   - headings
